--- a/docs/templates/bunit/styles/main.css
+++ b/docs/templates/bunit/styles/main.css
@@ -1,77 +1,97 @@
 .navbar-brand {
-  line-height: 50px;
-  margin-right: 15px !important;
-}
-.navbar-brand>img {
-  display: inline-block;
-  margin-top: -8px;
-  margin-right: 5px;
+    line-height: 50px;
+    margin-right: 15px !important;
 }
 
-.navbar-brand>span {
-  font-weight: 600;
-  font-size: 16px;
-  color: #fff;
-}
+    .navbar-brand > img {
+        display: inline-block;
+        margin-top: -8px;
+        margin-right: 5px;
+    }
+
+    .navbar-brand > span {
+        font-weight: 600;
+        font-size: 16px;
+        color: #fff;
+    }
 
 .body-content {
-  font-size: 1.4rem;
+    font-size: 1.4rem;
 }
 
 .article {
-  margin-top: 80px; 
+    margin-top: 80px;
 }
 
 .sideaffix {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .tabGroup {
-  margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
-.tabGroup section[role="tabpanel"] {
-  border: none;
-}
+    .tabGroup section[role="tabpanel"] {
+        border: none;
+        padding: 0px;
+    }
 
-.tabGroup section pre:first-child {
-  margin-top: -15px !important;
-  margin-left: -15px;
-  margin-right: -15px;
-  margin-bottom: -15px !important;
-}
+        .tabGroup section[role="tabpanel"] > pre {
+            margin-left: 0;
+            margin-right: 0;
+        }
 
-.tabGroup .alert {
-  margin-left: -16px;
-  margin-right: -16px;
-  margin-bottom: 0;
-  margin-top: 28px !important;
-}
+            .tabGroup section[role="tabpanel"] > pre:last-child {
+                margin-bottom: 0;
+            }
+
+    .tabGroup .alert {
+        margin-bottom: 0;
+    }
 
 pre {
-  border-radius: 0px;
+    border-radius: 4px;
+    border: none;
 }
 
-pre code {
-  white-space: pre;
-}
+    pre code {
+        white-space: pre;
+    }
 
 code[name] {
-  display: inline-block;
-  position: relative;
-  padding-top: 20px;
+    display: block;
+    position: relative;
 }
 
-code[name]:before {
-  content: attr(name);
-  position: absolute;
-  top: 0;
-  font-style: italic;
-  z-index: 100;
-  color: grey;
-}
+    code[name]:before {
+        content: attr(name);
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-style: italic;
+        z-index: 0;
+        text-align: right;
+        color: #c5c5c5;
+        background: white;
+        border-radius: 4px;
+        padding: 0 6px;
+    }
 
 .alert-info code {
-  background-color: inherit;
-  color: #131ed2;
+    background-color: inherit;
+    color: #131ed2;
 }
+
+a.xref[href*="/api/"] {
+    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 4px;
+}
+
+    a.xref[href*="/api/"]:hover {
+        background-color: inherit;
+        text-decoration: underline;
+    }
